[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-utils-lib"
version = "0.0.4"
description = "Cloud utilities Python library published to Google Artifact Registry"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["cloud_utils_lib"]
